# vuln-agent-freya

./: .env.example  .gitignore  APPLICATION_FEATURE_AND_ARCHITECTURE.md  Agent_Example.py  PR_FIX.md  README.md  RQ_SUBMISSIONS_PROVIDER_SEARCH_API_FEATURE_AND_ARCHITECTURE.md
.claude/: settings.local.json
agent-api/: pyproject.toml
agent-api/app/: main.py
agent-api/app/agents/: __init__.py  classifier_agent.py  planner_agent.py  summarizer_agent.py
agent-api/app/api/: __init__.py  batch_router.py  remediate_router.py
agent-api/app/clients/: __init__.py  tools_api_client.py
agent-api/app/core/: __init__.py  config.py  llm_factory.py  logging_config.py
agent-api/app/graph/: builder.py  nodes.py  state.py
agent-api/app/schemas/: __init__.py  models.py
agent-api/app/services/: __init__.py  batch_remediation_service.py  remediation_service.py
agent-api/app/utils/: __init__.py  audit_summary.py  csv_parser.py  presentation.py  remediation_report.py  version_fallback.py
tools-api/: pyproject.toml
tools-api/app/: main.py
tools-api/app/api/: __init__.py  npm_router.py  packages_router.py  pull_requests_router.py  workspaces_router.py
tools-api/app/core/: __init__.py  config.py  logger.py
tools-api/app/models/: __init__.py  npm_models.py  package_models.py  pull_request_models.py  workspace_models.py
tools-api/app/services/: __init__.py  git_service.py  github_service.py  npm_service.py  workspace_service.py
tools-api/app/workflows/: __init__.py  audit_fix_workflow.py  commit_changes_workflow.py  package_update_workflow.py  pull_request_workflow.py  (+1 more)
(+4 files in other folders)
